--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "eas": "^0.1.0",
+    "eas-cli": "^12.5.1",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.27",
